src/objects/FieloPLT__Reward__c.object
<CustomObject>
    <description>Rewards are the prizes available to Members who are part of a Program.</description>
    <fields>
        <fullName>FieloPLT__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Categories organize Rewards within a Catalog.</description>
        <inlineHelpText>Choose the Category where the Reward can be included.</inlineHelpText>
        <label>Category</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>That category belongs to another program. You must create the category in this program before trying to use it.</errorMessage>
            <filterItems>
                <field>$Source.FieloPLT__Program__c</field>
                <operation>equals</operation>
                <valueField>FieloPLT__Category__c.FieloPLT__Program__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloPLT__Category__c</referenceTo>
        <relationshipLabel>Rewards</relationshipLabel>
        <relationshipName>Rewards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__DaysAvailable__c</fullName>
        <description>Number of days a Voucher is valid after Redemption.</description>
        <inlineHelpText>Enter the number of days a Voucher is valid after Redemption.</inlineHelpText>
        <label>Reward Voucher Validity (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Description__c</fullName>
        <description>Product detailed description.</description>
        <inlineHelpText>Enter Reward product description.</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__ExpirationDate__c</fullName>
        <description>Date after which the Reward is no longer valid to redeem.</description>
        <inlineHelpText>Choose the Reward expiration date.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Image__c</fullName>
        <description>Reward image (upload an image or enter URL).</description>
        <inlineHelpText>Choose a Reward image (upload an image or enter URL).</inlineHelpText>
        <label>Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Instructions__c</fullName>
        <description>Detailed steps to obtain the Voucher.</description>
        <inlineHelpText>Enter detailed steps to obtain the Voucher.</inlineHelpText>
        <label>Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__IsInstantReward__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Reward will be available to be given directly to Members via Incentives.</description>
        <inlineHelpText>When ticked, the Reward will be available to be given directly to Members via Incentives.</inlineHelpText>
        <label>Instant Reward</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Points__c</fullName>
        <description>Number of points needed by Rewards to be redeemed.</description>
        <inlineHelpText>Number of points needed by Rewards to be redeemed.</inlineHelpText>
        <label>Points</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Program where the Reward belongs to.</description>
        <inlineHelpText>Choose the Program where the Reward belongs to.</inlineHelpText>
        <label>Program</label>
        <referenceTo>FieloPLT__Program__c</referenceTo>
        <relationshipLabel>Rewards</relationshipLabel>
        <relationshipName>Rewards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It relates the Reward to a particular Segment.</description>
        <inlineHelpText>It relates the Reward to a particular Segment.</inlineHelpText>
        <label>Segment</label>
        <referenceTo>FieloPLT__Segment__c</referenceTo>
        <relationshipLabel>Rewards</relationshipLabel>
        <relationshipName>Rewards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Available</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__StockManagement__c</fullName>
        <description>It performs stock control.</description>
        <inlineHelpText>Choose Reward stock control.</inlineHelpText>
        <label>Stock Management</label>
        <picklist>
            <picklistValues>
                <fullName>Controlled By Quantity</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Controlled By Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlimited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Stock__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Reward items available to be redeem.</description>
        <inlineHelpText>Reward items available to be redeem.</inlineHelpText>
        <label>Items Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__UniqueVoucher__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When ticked, a Voucher may include more than one Reward item.</description>
        <inlineHelpText>When ticked, a Voucher may include more than one Reward item.</inlineHelpText>
        <label>Unique Voucher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__UnitCost__c</fullName>
        <description>Reward purchase cost.</description>
        <inlineHelpText>Reward purchase cost.</inlineHelpText>
        <label>Unit Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Reward</label>
    <listViews>
        <fullName>FieloPLT__All</fullName>
        <columns>NAME</columns>
        <columns>FieloPLT__Description__c</columns>
        <columns>FieloPLT__Points__c</columns>
        <columns>FieloPLT__StockManagement__c</columns>
        <columns>FieloPLT__Stock__c</columns>
        <columns>FieloPLT__ExpirationDate__c</columns>
        <columns>FieloPLT__IsInstantReward__c</columns>
        <columns>FieloPLT__UniqueVoucher__c</columns>
        <columns>FieloPLT__Program__c</columns>
        <columns>FieloPLT__Instructions__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Rewards</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Reward Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rewards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloPLT__AvailableDays</fullName>
        <active>true</active>
        <description>Value must be positive.</description>
        <errorConditionFormula>FieloPLT__DaysAvailable__c &lt; 0</errorConditionFormula>
        <errorDisplayField>FieloPLT__DaysAvailable__c</errorDisplayField>
        <errorMessage>Value must be positive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloPLT__ChangeStockMode</fullName>
        <active>true</active>
        <description>Only allowed when stock equals zero.</description>
        <errorConditionFormula>((ISPICKVAL(PRIORVALUE(FieloPLT__StockManagement__c), &apos;Controlled By Quantity&apos;) &amp;&amp; (ISPICKVAL(FieloPLT__StockManagement__c, &apos;Unlimited&apos;) || ISPICKVAL(FieloPLT__StockManagement__c, &apos;Controlled By Item&apos;))) ||
(ISPICKVAL(PRIORVALUE(FieloPLT__StockManagement__c), &apos;Controlled By Item&apos;) &amp;&amp; (ISPICKVAL(FieloPLT__StockManagement__c, &apos;Unlimited&apos;) ||
ISPICKVAL(FieloPLT__StockManagement__c, &apos;Controlled By Quantity&apos;)))) &amp;&amp;
FieloPLT__Stock__c &gt; 0</errorConditionFormula>
        <errorDisplayField>FieloPLT__StockManagement__c</errorDisplayField>
        <errorMessage>Only allowed when stock equals zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloPLT__MultiVoucher</fullName>
        <active>true</active>
        <description>Controlled by Item Rewards with preloaded Vouchers cannot have a Unique Voucher.</description>
        <errorConditionFormula>FieloPLT__UniqueVoucher__c &amp;&amp;  ISPICKVAL(FieloPLT__StockManagement__c, &apos;Controlled By Item&apos;)</errorConditionFormula>
        <errorMessage>Controlled by Item Rewards with preloaded Vouchers cannot have a Unique Voucher.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloPLT__PointsRequired</fullName>
        <active>true</active>
        <description>Set point value to the Reward.</description>
        <errorConditionFormula>ISNULL( FieloPLT__Points__c )</errorConditionFormula>
        <errorDisplayField>FieloPLT__Points__c</errorDisplayField>
        <errorMessage>Include point value to the Reward.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloPLT__PositivePointsQuantity</fullName>
        <active>true</active>
        <description>Value must be positive.</description>
        <errorConditionFormula>FieloPLT__Points__c &lt; 0</errorConditionFormula>
        <errorDisplayField>FieloPLT__Points__c</errorDisplayField>
        <errorMessage>Value must be positive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloPLT__PositiveStock</fullName>
        <active>true</active>
        <description>Stock must be positive.</description>
        <errorConditionFormula>AND(IF(ISCHANGED(FieloPLT__Stock__c) ,
IF( OR(ISBLANK(FieloPLT__Stock__c) , FieloPLT__Stock__c &lt; 0) ,
true,
false),
false), NOT( ISPICKVAL(FieloPLT__StockManagement__c, &apos;Unlimited&apos;) ))</errorConditionFormula>
        <errorMessage>Stock must be positive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloPLT__PositiveUnitCost</fullName>
        <active>true</active>
        <description>Value must be positive.</description>
        <errorConditionFormula>FieloPLT__UnitCost__c &lt; 0</errorConditionFormula>
        <errorDisplayField>FieloPLT__UnitCost__c</errorDisplayField>
        <errorMessage>Value must be positive.</errorMessage>
    </validationRules>
</CustomObject>